# paskell

./: Hash.cabal  README.md
src/: Hash  Hash.hi  Hash.hs  Main  Main.hi  Main.hs
src/Language/: Commands.hi  Commands.hs  Exec.hi  Exec.hs  Expressions.hi  Expressions.hs
src/Parsing/: HashParser.hs
