name:           Hash
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         shtakor

executable Hash
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers >=0.5 && <0.6,
                   directory >=1.2 && <1.3,
                   MissingH >=1.3 && <1.4,
                   regex-compat >=0.95 && <0.96,
                   process >=1.1 && <1.2,
                   unix >=2.6 && <2.7
  ghc-options:     -Wall
  other-modules:   
                   Hash,
                   Language.Expressions,
                   Language.Exec,
                   Language.Commands,
                   Parsing.HashParser,
                   Main

